# food-truck-app

./: .gitignore  CHANGELOGS.md  README.md  docker-compose.yaml
client/: .prettierignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json
client/pages/api/: health.ts
client/src/app/: constants.ts  layout.tsx  page.tsx
client/src/app/common/: footer.tsx  header.tsx
client/src/app/consumer/: viewFood.tsx
client/src/app/merchant/: addFood.tsx  addFoodTruck.tsx  listFood.tsx  listFoodTruck.tsx
server/: .env  package-lock.json  package.json  thunder-collection_food_truck_as_a_service_postman.json
server/routes/: foodTrucks.js  health.js  info.js
server_food/: README.md  requirements.txt
server_food/app/: api.py  main.py  metadata.py  test_main.py
server_food/app/core/: common_handlers.py
server_food/app/endpoints/: food_truck.py  router.py
server_food/app/models/: food.py  food_truck.py
server_node/: .prettierignore  Dockerfile  Dockerfile.dev  README.md  app.js  constants.js  package-lock.json  package.json
server_node/routes/: foodTrucks.js  health.js  info.js
server_py/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt
server_py/app/: main.py  metadata.py  test_main.py
server_py/app/configs/: development.yml
server_py/app/core/: special_handlers.py
server_py/app/endpoints/: food_truck.py
server_py/app/schema/: food_truck_entity.py
