[tool.poetry]
name = "server_food"
version = "0.0.1"
description = "Bunch of API built for food truck functionalities."
authors = ["Ashwin Hegde <ashwin.hegde3@gmail.com>"]
maintainers = ["Ashwin Hegde <ashwin.hegde3@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hegdeashwin/food-truck-app"
documentation = "https://github.com/hegdeashwin/food-truck-app/blob/main/README.md"
keywords = ["microservice", "python", "REST", "fastapi"]
homepage = "https://github.com/hegdeashwin/food-truck-app"
license = "MIT"

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "3.8"
fastapi = "0.79.0"
fastapi-versioning = "0.10.0"
loguru = "0.6.0"
pydantic = "1.9.2"
fastapi-limiter = "0.1.5"
requests = "2.28.2"
uvicorn = "0.20.0"
omegaconf = "2.3.0"
pymongo = "4.3.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pylint = "2.16.2"
black = "23.1.0"
isort = "5.12.0"
httpx = "0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
